--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.36.3",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^7.6.19",
     "jsqr": "^1.4.0",
     "material-react-table": "^1.5.4",
@@ -27,6 +28,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
