--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^7.6.19",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jsqr": "^1.4.0",
     "material-react-table": "^1.5.4",
     "react": "^18.2.0",
@@ -30,7 +32,8 @@
     "react-scripts": "5.0.1",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
