--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
